minikube/_infra/service.yml
#==================================================
# argocd(headless)
#==================================================
apiVersion: v1
kind: Service
metadata:
  name: argocd
  namespace: infra
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local

---
#==================================================
# prometheus(headless)
#==================================================
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: infra
spec:
  type: ExternalName
  externalName: prometheus-server.prometheus.svc.cluster.local
