minikube/_infra/ingress.yml
#==================================================
# ingress-https
#==================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-https
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  rules:
    # argocd
    - host: argocd.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd
                port:
                  number: 443
    # argocd
    - host: argocd.chomookun.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd
                port:
                  number: 443

---
#==================================================
# ingress-http
#==================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  rules:
    # prometheus
    - host: prometheus.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus
                port:
                  number: 80
    # arch4j-web
    - host: arch4j-web.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arch4j-web
                port:
                  number: 8080
    # duice-example
    - host: duice-example.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: duice-example
                port:
                  number: 3000
    # fintics
    - host: fintics.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fintics
                port:
                  number: 8080
    # fintics-etf
    - host: fintics-etf.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fintics-etf
                port:
                  number: 8080
    # fintics-ai
    - host: fintics-ai.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fintics-ai
                port:
                  number: 8080
    # soma-admin
    - host: soma-admin.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: soma-admin
                port:
                  number: 8080
    # soma-collector
    - host: soma-collector.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: soma-collector
                port:
                  number: 8080
    # batman-admin
    - host: batman-admin.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: batman-admin
                port:
                  number: 8080
